modify template class

--- a/app/templates/skeleton/index.html
+++ b/app/templates/skeleton/index.html
@@ -33,7 +33,7 @@
   <div>
     <div id="content" class="container">
       <div class="row">
-        <div <%= routerViewDirective %>>
+        <div class="col-md-12" <%= routerViewDirective %>>
         </div>
       </div>
     </div>
