--- a/app/templates/skeleton/index.html
+++ b/app/templates/skeleton/index.html
@@ -12,7 +12,7 @@
   <script src="http://localhost:35729/livereload.js" data-concat="false"></script>
 
   <!-- JS from Bower Components -->
-  <script src="bower_components/less.js/dist/less-1.6.2.js" data-concat="false"></script>
+  <script src="bower_components/less.js/dist/less.js" data-concat="false"></script>
   <script src="bower_components/jquery/jquery.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
@@ -22,7 +22,6 @@
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-  <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
   <!-- Add New Bower Component JS Above -->
 
 
@@ -30,14 +29,7 @@
   <script src="app.js"></script>
   <!-- Add New Component JS Above -->
 
-  <div>
-    <div id="content" class="container">
-      <div class="row">
-        <div class="col-md-12" <%= routerViewDirective %>>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div  <%= routerViewDirective %>></div>
 
 </body>
 </html>
