add data to ng attributes

--- a/partial/templates/partial.html
+++ b/partial/templates/partial.html
@@ -1,4 +1,4 @@
-<div class="<%= partialname %>" ng-controller="<%= ctrlname %>">
+<div class="<%= partialname %>" data-ng-controller="<%= ctrlname %>">
 
 
 </div>
